# boreal-forest-expansion

./: .gitignore  README.md  pyproject.toml  setup.sh
_old/: setup.py
analysis/: forcing_maps.ipynb
cases-scripts/: 0a-NF2000norbc_f19_f19_test.sh  0c-NF1850norbc_tropstratchem_f19_f19_test.sh  0d-NF2000norbc_tropstratchem_f19_f19_test.sh  0e-NF2100ssp585norbc_tropstratchem_f19_f19_test.sh  1-NF2000norbc_tropstratchem_spinup_f19_f19.sh  11-NF2100ssp585norbc_tropstratchem_spinup_f19_f19.sh  13bx-NF2100ssp585norbc_tropstratchem_quick_spinup_lcc_f19_f19.sh  14a-NF2100ssp585norbc_tropstratchem_nudg_lcc_f19_f19.sh  14b-NF2100ssp585norbc_tropstratchem_nudg_lcc_fBVOC_f19_f19.sh  2a-NF2000norbc_tropstratchem_met_f19_f19.sh  2b-NF2000norbc_tropstratchem_landonly_spinup_lcc_f19_f19.sh  33-NF2100ssp585norbc_tropstratchem_fut_nudg_ctrl_f19_f19.sh  3a-NF2000norbc_tropstratchem_nudg_ctrl_f19_f19.sh  3bx-NF2000norbc_tropstratchem_quick_spinup_lcc_f19_f19.sh  4a-NF2000norbc_tropstratchem_nudg_lcc_f19_f19.sh  4b-NF2000norbc_tropstratchem_nudg_lcc_fBVOC_f19_f19.sh  NF2000_tropstratchem_preLCC_f19_f19.sh  NF2000norbc_crop_f19_f19_test.sh  NF2000norbc_f19_f19_test.sh  cases-set-up-2000.sh  cases-set-up-2100.sh  cases-setup.sh  copy-nudging-data-to-inputForNudging-directory.sh  move-nudging-data.sh
data/: README.md
postprocess/: create_bvoc_emissions_climatology.py  postprocess.py
preprocess/: copy-nudging-data-to-inputForNudging-directory.sh  create_bvoc_emissions_climatology.py  create_em_files_high_res.py  make_cplhist_monthly_from_daily.sh  plot-lcc.ipynb
(+106 files in other folders)
